# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-5803604b/example-5803604b-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_5803604b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_5803604b"]
        
        [project]
        name = "example-5803604b"
        version = "0.0.0"
        dependencies = ["example-5803604b-a"]
        requires-python = ">=3.7"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`"
  
      ''',
      'build/example-5803604b/example-5803604b-0.0.0/src/example_5803604b/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-5803604b/example-5803604b-a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_5803604b_a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_5803604b_a"]
        
        [project]
        name = "example-5803604b-a"
        version = "1.0.0"
        dependencies = ["example-5803604b-b>1.0.0"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-5803604b/example-5803604b-a-1.0.0/src/example_5803604b_a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-5803604b/example-5803604b-b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_5803604b_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_5803604b_b"]
        
        [project]
        name = "example-5803604b-b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-5803604b/example-5803604b-b-1.0.0/src/example_5803604b_b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-5803604b/example-5803604b-b-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_5803604b_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_5803604b_b"]
        
        [project]
        name = "example-5803604b-b"
        version = "2.0.0"
        dependencies = ["example-5803604b-c"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-5803604b/example-5803604b-b-2.0.0/src/example_5803604b_b/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-5803604b/example-5803604b-b-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_5803604b_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_5803604b_b"]
        
        [project]
        name = "example-5803604b-b"
        version = "3.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-5803604b/example-5803604b-b-3.0.0/src/example_5803604b_b/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-5803604b/example_5803604b-0.0.0.tar.gz': 'md5:3f66f9c9f2e7d126fc11417ed1d7be1c',
      'dist/example-5803604b/example_5803604b_a-1.0.0-py3-none-any.whl': 'md5:4b4700654e73de004695cca56020f84d',
      'dist/example-5803604b/example_5803604b_a-1.0.0.tar.gz': 'md5:667676ba8f350e715ff9a7bcca154202',
      'dist/example-5803604b/example_5803604b_b-1.0.0-py3-none-any.whl': 'md5:850c2558f1e9d4c6dfbbca1a68abda1a',
      'dist/example-5803604b/example_5803604b_b-1.0.0.tar.gz': 'md5:d947be6ef69b26722e8f54a5eaaaa0e9',
      'dist/example-5803604b/example_5803604b_b-2.0.0-py3-none-any.whl': 'md5:5612ce500423b8efb8f2e4a3115f06e7',
      'dist/example-5803604b/example_5803604b_b-2.0.0.tar.gz': 'md5:b6602a08c699e1a3873266057666a310',
      'dist/example-5803604b/example_5803604b_b-3.0.0-py3-none-any.whl': 'md5:b4a2e8ef0e163babd838d1e3a1a8d7c4',
      'dist/example-5803604b/example_5803604b_b-3.0.0.tar.gz': 'md5:785b533567ba1d24bb21cedfd58aebe9',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-5803604b
        │       ├── example-5803604b-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_5803604b
        │       │           └── __init__.py
        │       ├── example-5803604b-a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_5803604b_a
        │       │           └── __init__.py
        │       ├── example-5803604b-b-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_5803604b_b
        │       │           └── __init__.py
        │       ├── example-5803604b-b-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_5803604b_b
        │       │           └── __init__.py
        │       └── example-5803604b-b-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_5803604b_b
        │                   └── __init__.py
        └── dist
            └── example-5803604b
                ├── example_5803604b-0.0.0.tar.gz
                ├── example_5803604b_a-1.0.0-py3-none-any.whl
                ├── example_5803604b_a-1.0.0.tar.gz
                ├── example_5803604b_b-1.0.0-py3-none-any.whl
                ├── example_5803604b_b-1.0.0.tar.gz
                ├── example_5803604b_b-2.0.0-py3-none-any.whl
                ├── example_5803604b_b-2.0.0.tar.gz
                ├── example_5803604b_b-3.0.0-py3-none-any.whl
                └── example_5803604b_b-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-5803604b
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 1,
    'filesystem': dict({
      'tree': '''
        test_build_example_already_exi0
        └── build
            └── example-5803604b
        
        2 directories
  
      ''',
    }),
    'stderr': '''
      Building 'example-5803604b' in directory 'build/example-5803604b'
      Destination directory '[PWD]/build/example-5803604b' already exists. Pass `--rm` to allow removal.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '''
      example-5803604b
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-e0012891/example-e0012891-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_e0012891"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_e0012891"]
        
        [project]
        name = "example-e0012891"
        version = "0.0.0"
        dependencies = ["example-e0012891-a"]
        requires-python = ">=3.7"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`"
  
      ''',
      'build/example-e0012891/example-e0012891-0.0.0/src/example_e0012891/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-e0012891/example-e0012891-a-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_e0012891_a"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_e0012891_a"]
        
        [project]
        name = "example-e0012891-a"
        version = "1.0.0"
        dependencies = ["example-e0012891-b>1.0.0"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-e0012891/example-e0012891-a-1.0.0/src/example_e0012891_a/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-e0012891/example-e0012891-b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_e0012891_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_e0012891_b"]
        
        [project]
        name = "example-e0012891-b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-e0012891/example-e0012891-b-1.0.0/src/example_e0012891_b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-e0012891/example-e0012891-b-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_e0012891_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_e0012891_b"]
        
        [project]
        name = "example-e0012891-b"
        version = "2.0.0"
        dependencies = ["example-e0012891-c"]
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-e0012891/example-e0012891-b-2.0.0/src/example_e0012891_b/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-e0012891/example-e0012891-b-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_e0012891_b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_e0012891_b"]
        
        [project]
        name = "example-e0012891-b"
        version = "3.0.0"
        dependencies = []
        requires-python = ">=3.7"
        description = ""
  
      ''',
      'build/example-e0012891/example-e0012891-b-3.0.0/src/example_e0012891_b/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-e0012891/example_e0012891-0.0.0.tar.gz': 'md5:82e19984cf1035449d1ecbceeb1e8004',
      'dist/example-e0012891/example_e0012891_a-1.0.0-py3-none-any.whl': 'md5:6cdf5d7f86f513a4b0ffabc6ebf5ca29',
      'dist/example-e0012891/example_e0012891_a-1.0.0.tar.gz': 'md5:025ab4a3e19c0cdd999131bb63789696',
      'dist/example-e0012891/example_e0012891_b-1.0.0-py3-none-any.whl': 'md5:9a4b3a6d4bdb90b239ce2881d6ae4848',
      'dist/example-e0012891/example_e0012891_b-1.0.0.tar.gz': 'md5:b3a9e938d7f97c5db198bf92f1b18afb',
      'dist/example-e0012891/example_e0012891_b-2.0.0-py3-none-any.whl': 'md5:df19550f9048db3dfe3f3c22a5bb6778',
      'dist/example-e0012891/example_e0012891_b-2.0.0.tar.gz': 'md5:6a106ffdee177cc37403f25adde559b2',
      'dist/example-e0012891/example_e0012891_b-3.0.0-py3-none-any.whl': 'md5:63bd3dd222f9f55538f3973fea85e85c',
      'dist/example-e0012891/example_e0012891_b-3.0.0.tar.gz': 'md5:6bb3dc7918670fb77310f375ec442f63',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-e0012891
        │       ├── example-e0012891-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_e0012891
        │       │           └── __init__.py
        │       ├── example-e0012891-a-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_e0012891_a
        │       │           └── __init__.py
        │       ├── example-e0012891-b-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_e0012891_b
        │       │           └── __init__.py
        │       ├── example-e0012891-b-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_e0012891_b
        │       │           └── __init__.py
        │       └── example-e0012891-b-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_e0012891_b
        │                   └── __init__.py
        └── dist
            └── example-e0012891
                ├── example_e0012891-0.0.0.tar.gz
                ├── example_e0012891_a-1.0.0-py3-none-any.whl
                ├── example_e0012891_a-1.0.0.tar.gz
                ├── example_e0012891_b-1.0.0-py3-none-any.whl
                ├── example_e0012891_b-1.0.0.tar.gz
                ├── example_e0012891_b-2.0.0-py3-none-any.whl
                ├── example_e0012891_b-2.0.0.tar.gz
                ├── example_e0012891_b-3.0.0-py3-none-any.whl
                └── example_e0012891_b-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-e0012891
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--rm] [-v] [-q] targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
